Preventing overflow of the content type pager image

--- a/sites/all/themes/eshell/styles/scss/features/_core.scss
+++ b/sites/all/themes/eshell/styles/scss/features/_core.scss
@@ -172,6 +172,7 @@ ul.tabs{
   z-index: 500;
   img{
     height: 80px;
+    max-width: 120px;
     width: auto;
   }
   .flippy-nav{
